--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "apollo-server-express": "^2.15.0",
     "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
     "graphql": "^16.0.1"
   }
 }
